@@ -253,6 +253,13 @@ local function enter_vehicles_pressed(player, force_enter_entity)
 
     local serialised_data = global.stored_spidertrons_personal[player.index]
     if not player.driving and serialised_data then
+
+      -- If player is in a Jetpack then don't do anything
+      if remote.interfaces["jetpack"] then
+        if remote.call("jetpack", "get_jetpacks", {surface_index = player.surface.index})[player.character.unit_number] then
+          return
+        end
+      end
       enter_spidertron(player, serialised_data)
       global.stored_spidertrons_personal[player.index] = nil
 
